- updated to the latest version - added cpuert - added cpurf - added hybridert - added hybridrf - added preprocessing target - added benchmark target - made the gpu implementations optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,23 +3,34 @@ cmake_minimum_required(VERSION 2.8)
 project(datamininglibs C CXX)
 
 find_package(GTest)
-find_package(CUDA REQUIRED)
+find_package(CUDA)
 
 set(CUDA_ATTACH_VS_BUILD_RULE_TO_CUDA_FILE OFF)
 set(CUDA_64_BIT_DEVICE_CODE ON)
 
+if(CUDA_FOUND)
+	add_definitions(-DCuda_Found)
+else(CUDA_FOUND)
+	message("Could not find the Cuda toolkit, the Cuda algorithms will not be built.")
+endif(CUDA_FOUND)
+
 add_definitions(-DUNICODE -D_UNICODE)
 if(WIN32)
 	add_definitions(-DWindowsBuild)
+	set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS_RELEASE} -MP" )
 	set(CUDA_SEPARABLE_COMPILATION ON)
 	set(CUDA_NVCC_FLAGS_DEBUG ${CUDA_NVCC_FLAGS_DEBUG};-gencode arch=compute_30,code=sm_30;-g;-G;-lineinfo)
-	set(CUDA_NVCC_FLAGS_OPTIMIZED ${CUDA_NVCC_FLAGS_OPTIMIZED};-gencode arch=compute_30,code=sm_30;-O3)
+	set(CUDA_NVCC_FLAGS_RELEASE ${CUDA_NVCC_FLAGS_RELEASE};-gencode arch=compute_30,code=sm_30;-O3)
+	set(CUDA_NVCC_FLAGS_MINSIZEREL ${CUDA_NVCC_FLAGS_MINSIZEREL};-gencode arch=compute_30,code=sm_30)
 else(WIN32)
+	set(TBB_INCLUDE_DIR "/usr/include")
+	set(TBB_LIBRARY_DIR "/usr/lib")
 	add_definitions(-DUnixBuild)
-	set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC" )
+	set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC" )
 	set(CUDA_SEPARABLE_COMPILATION ON)
 	set(CUDA_NVCC_FLAGS_DEBUG ${CUDA_NVCC_FLAGS_DEBUG};-gencode arch=compute_20,code=sm_20;-g;-G;-lineinfo;-std=c++11)
-	set(CUDA_NVCC_FLAGS_OPTIMIZED ${CUDA_NVCC_FLAGS_OPTIMIZED};-gencode arch=compute_20,code=sm_20;-O3;-std=c++11)
+	set(CUDA_NVCC_FLAGS_RELEASE ${CUDA_NVCC_FLAGS_RELEASE};-gencode arch=compute_20,code=sm_20;-O3;-std=c++11)
+	set(CUDA_NVCC_FLAGS_MINSIZEREL ${CUDA_NVCC_FLAGS_MINSIZEREL};-gencode arch=compute_20,code=sm_20;-O3;-std=c++11)
 endif(WIN32)
 
 set (LIBRARY_OUTPUT_PATH Build_Output/Libs CACHE PATH "Lib path")
@@ -34,6 +45,16 @@ add_subdirectory(./lib_models)
 add_subdirectory(./lib_data)
 add_subdirectory(./lib_gpu)
 add_subdirectory(./lib_ensembles)
+add_subdirectory(./lib_preprocess)
+
+if(CUDA_FOUND)
+	add_subdirectory(./lib_cuda_algorithms)
+endif(CUDA_FOUND)
+
+if(WIN32)
+	add_subdirectory(./runnable_preprocess)
+	add_subdirectory(./runnable_benchmark)
+endif(WIN32)
 
 if(GTEST_FOUND)
 	add_subdirectory(./runnable_test)
