--- a/lib_ensembles/CMakeLists.txt
+++ b/lib_ensembles/CMakeLists.txt
@@ -12,43 +12,37 @@ set(dir_list
 	../lib_core/include
 	../lib_parsing/include
 	../lib_algorithms/include
+	../lib_cuda_algorithms/include
+	${TBB_INCLUDE_DIR}
 )
 
 set(cpp_files
-	./test/test_gpurf.h
-	./test/test_gpuert.h
+	./test/test_cpuert.h
+	./test/test_cpurf.h
 	./test/test_resources.h
 
 	../source_shared/precomp.h
 	./include/lib_ensembles.h
 	./include/ensembles_interface.h	
-	./source/gpurf.h
-	./source/gpudte.h
-	./source/gpuert.h
-	./source/gpudte_algorithm.h
-	./source/gpudte_algorithm_shared.h
+	./source/cpudte.h
+	./source/cpuert.h
+	./source/cpurf.h
 
-	./source/gpurf.cu
-	./source/gpudte.cu
-	./source/gpuert.cu
-	./source/gpudte_algorithm.cc
-	./source/gpudte_algorithm_shared.cc
 	../source_shared/precomp.cc
 	./source/ensembles_interface.cc
+	./source/cpudte.cc
+	./source/cpuert.cc
+	./source/cpurf.cc
 )
 
 source_group(source FILES
-	./source/gpurf.h
-	./source/gpudte.h
-	./source/gpuert.h
-	./source/gpudte_algorithm.h
-	./source/gpudte_algorithm_shared.h
+	./source/cpudte.h
+	./source/cpuert.h
+	./source/cpurf.h
 
-	./source/gpurf.cu
-	./source/gpudte.cu
-	./source/gpuert.cu
-	./source/gpudte_algorithm.cc
-	./source/gpudte_algorithm_shared.cc
+	./source/cpudte.cc
+	./source/cpuert.cc
+	./source/cpurf.cc
 )
 
 source_group(interface FILES
@@ -59,8 +53,8 @@ source_group(interface FILES
 )
 
 source_group(test FILES
-	./test/test_gpurf.h
-	./test/test_gpuert.h
+	./test/test_cpuert.h
+	./test/test_cpurf.h
 	./test/test_resources.h
 )
 
@@ -70,27 +64,23 @@ source_group(precomp FILES
 	../source_shared/precomp.cc
 )
 
-CUDA_ADD_LIBRARY(lib_ensembles SHARED ${cpp_files})
+include_directories( 
+	${dir_list}
+)
+
+ADD_LIBRARY(lib_ensembles SHARED ${cpp_files})
 if(UNIX)
 	target_compile_features(lib_ensembles PRIVATE cxx_range_for cxx_contextual_conversions cxx_generic_lambdas)
 endif(UNIX)
 
 target_link_libraries(lib_ensembles 
-	${CUDA_cusparse_LIBRARY}
-	${CUDA_curand_LIBRARY}
-	${CUDA_LIBRARIES}
-
 	lib_models
 	lib_data
 	lib_parsing
 	lib_gpu
 	lib_core
 	lib_algorithms
-)
-
-include_directories(lib_ensembles 
-	${dir_list}
-	${CUDA_INCLUDE_DIRS}
+	lib_cuda_algorithms
 )
 
 if (MSVC)
