--- a/lib_core/CMakeLists.txt
+++ b/lib_core/CMakeLists.txt
@@ -6,6 +6,7 @@ set(dir_list
 	./source
 	../source_shared
 	../source_shared/include
+	${TBB_INCLUDE_DIR}
 )
 
 set(cpp_files
@@ -49,10 +50,17 @@ source_group(precomp FILES
 add_library(lib_core SHARED ${cpp_files})
 if(UNIX)
 	target_compile_features(lib_core PRIVATE cxx_range_for cxx_contextual_conversions cxx_generic_lambdas)
+	target_link_libraries(lib_core
+		debug "${TBB_LIBRARY_DIR}/libtbb_debug.so"
+		optimized "${TBB_LIBRARY_DIR}/libtbb.so"
+	)
 endif(UNIX)
-
-target_link_libraries(lib_core
-)
+if(WIN32)
+	target_link_libraries(lib_core
+		debug "${TBB_LIBRARY_DIR}/tbb_debug.lib"
+		optimized "${TBB_LIBRARY_DIR}/tbb.lib"
+	)
+endif(WIN32)
 
 include_directories(lib_core
 	${dir_list}
