--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,9 +28,7 @@ else(WIN32)
 	add_definitions(-DUnixBuild)
 	set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC" )
 	set(CUDA_SEPARABLE_COMPILATION ON)
-	set(CUDA_NVCC_FLAGS_DEBUG ${CUDA_NVCC_FLAGS_DEBUG};-gencode arch=compute_20,code=sm_20;-g;-G;-lineinfo;-std=c++11)
-	set(CUDA_NVCC_FLAGS_RELEASE ${CUDA_NVCC_FLAGS_RELEASE};-gencode arch=compute_20,code=sm_20;-O3;-std=c++11)
-	set(CUDA_NVCC_FLAGS_MINSIZEREL ${CUDA_NVCC_FLAGS_MINSIZEREL};-gencode arch=compute_20,code=sm_20;-O3;-std=c++11)
+	set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_20;-std=c++11)
 endif(WIN32)
 
 set (LIBRARY_OUTPUT_PATH Build_Output/Libs CACHE PATH "Lib path")
