--- a/lib_data/CMakeLists.txt
+++ b/lib_data/CMakeLists.txt
@@ -53,7 +53,7 @@ source_group(precomp FILES
 	../source_shared/precomp.cc
 )
 
-CUDA_ADD_LIBRARY(lib_data SHARED ${cpp_files})
+ADD_LIBRARY(lib_data SHARED ${cpp_files})
 if(UNIX)
 	target_compile_features(lib_data PRIVATE cxx_range_for cxx_contextual_conversions cxx_generic_lambdas)
 target_link_libraries(lib_data
