--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# required cmake version                                                                                                                                                                                   
+# required cmake version
 cmake_minimum_required(VERSION 2.8)
 project(datamininglibs C CXX)
 
@@ -45,9 +45,10 @@ else(WIN32)
 	set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};
 	-gencode arch=compute_20,code=sm_20;
 	-gencode arch=compute_30,code=sm_30;
-	#-gencode arch=compute_35,code=sm_35;
-	#-gencode arch=compute_50,code=sm_50;
-	#-gencode arch=compute_60,code=sm_60;
+	-gencode arch=compute_35,code=sm_35;
+	-gencode arch=compute_50,code=sm_50;
+	-gencode arch=compute_60,code=sm_60;
+	-gencode arch=compute_61,code=sm_61;
 	-std=c++11)
 endif(WIN32)
 
