--- a/lib_core/CMakeLists.txt
+++ b/lib_core/CMakeLists.txt
@@ -50,17 +50,11 @@ source_group(precomp FILES
 add_library(lib_core SHARED ${cpp_files})
 if(UNIX)
 	target_compile_features(lib_core PRIVATE cxx_range_for cxx_contextual_conversions cxx_generic_lambdas)
-	target_link_libraries(lib_core
-		debug "${TBB_LIBRARY_DIR}/libtbb_debug.so"
-		optimized "${TBB_LIBRARY_DIR}/libtbb.so"
-	)
 endif(UNIX)
-if(WIN32)
-	target_link_libraries(lib_core
-		debug "${TBB_LIBRARY_DIR}/tbb_debug.lib"
-		optimized "${TBB_LIBRARY_DIR}/tbb.lib"
-	)
-endif(WIN32)
+
+target_link_libraries(lib_core
+	${TBB_LIBRARIES}
+)
 
 include_directories(lib_core
 	${dir_list}
