--- a/lib_data/CMakeLists.txt
+++ b/lib_data/CMakeLists.txt
@@ -56,17 +56,11 @@ source_group(precomp FILES
 ADD_LIBRARY(lib_data SHARED ${cpp_files})
 if(UNIX)
 	target_compile_features(lib_data PRIVATE cxx_range_for cxx_contextual_conversions cxx_generic_lambdas)
-target_link_libraries(lib_data
-		debug "${TBB_LIBRARY_DIR}/libtbb_debug.so"
-		optimized "${TBB_LIBRARY_DIR}/libtbb.so"
-	)
 endif(UNIX)
-if(WIN32)
-	target_link_libraries(lib_data
-		debug "${TBB_LIBRARY_DIR}/tbb_debug.lib"
-		optimized "${TBB_LIBRARY_DIR}/tbb.lib"
-	)
-endif(WIN32)
+
+target_link_libraries(lib_data
+	${TBB_LIBRARIES}
+)
 
 include_directories(lib_data
 	${dir_list}
